[gd_scene load_steps=7 format=2]

[ext_resource path="res://weapons/machine_gun/machine_gun_sprite.png" type="Texture" id=1]
[ext_resource path="res://weapons/machine_gun/MachineGun.gd" type="Script" id=2]
[ext_resource path="res://weapons/machine_gun/ArBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://weapons/machine_gun/Shot_sound.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/1586320.jpg" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "shot"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Gun_Flare:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.000640099, 0.0185629, 0.0371257 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("machine_gun_sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0480074, 0.0966549 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.76437, 0.821418 ), Vector2( 0.574536, 0.847014 ), Vector2( 0.76437, 0.821418 ) ]
}

[node name="MachineGun" type="Node2D"]
script = ExtResource( 2 )
bullet_scene = ExtResource( 3 )
shot_scene = ExtResource( 4 )

[node name="machine_gun_sprite" type="Sprite" parent="."]
position = Vector2( 0.369781, 0.231168 )
scale = Vector2( 0.76437, 0.821418 )
texture = ExtResource( 1 )

[node name="bullet_spawn" type="Node2D" parent="."]
position = Vector2( 23.4142, 0.396851 )

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.159
one_shot = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/shot = SubResource( 1 )

[node name="Gun_Flare" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 5 )
color = Color( 1, 0.843137, 0, 1 )
shadow_enabled = true

[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
